--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.baeldung</groupId>
+    <groupId>com.perera.microservice</groupId>
     <artifactId>MicroServices</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
@@ -13,11 +13,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring-cloud.version>2023.0.0</spring-cloud.version>
   </properties>
-  <groupId>com.baeldung</groupId>
   <artifactId>api-gateway</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>api-gateway</name>
-  <url>http://maven.apache.org</url>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
