--- a/service-one/pom.xml
+++ b/service-one/pom.xml
@@ -4,7 +4,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.baeldung</groupId>
+        <groupId>com.perera.microservice</groupId>
         <artifactId>MicroServices</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
