--- a/service-one/src/main/resources/application.properties
+++ b/service-one/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=8091
 spring.application.name=service-one
 eureka.instance.preferIpAddress=true
+#spring.profiles.active=production
+spring.cloud.config.uri=http://localhost:8888
+management.endpoints.web.exposure.include=refresh
