--- a/service-one/src/main/resources/application.properties
+++ b/service-one/src/main/resources/application.properties
@@ -1,7 +1,4 @@
+spring.config.import=optional:configserver:http://localhost:8888
 server.port=8091
 spring.application.name=service-one
-spring.cloud.config.uri=http://localhost:8888
-spring.profiles.active=default
 management.endpoints.web.exposure.include=refresh
-#eureka.instance.preferIpAddress=true
-#spring.profiles.active=production
