adding new module service 2 and call the service 1 from service u using Eureka discovery

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>service-registry</module>
         <module>api-gateway</module>
         <module>service-one</module>
+        <module>service-two</module>
         <module>service-finance</module>
         <module>service-hr</module>
         <module>service-inventory</module>
