--- a/service-one/src/main/resources/application.properties
+++ b/service-one/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.config.import=optional:configserver:http://localhost:8888
+#spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://config-server
 server.port=8081
 spring.application.name=service-one
-management.endpoints.web.exposure.include=refresh
