--- a/service-two/src/main/resources/application.properties
+++ b/service-two/src/main/resources/application.properties
@@ -5,3 +5,4 @@ server.port=8082
 spring.application.name=service-two
 # Eureka server URL
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+service1.location=http://service-one/hello
